fix generate swagger
