# server/internal/adapter/themoviedb/tv.go
@@ -38,10 +38,10 @@ func (api *API) GetTV(ctx context.Context, tvID uint64, language Language) (*TVS
 		Genres       []struct {
 			Name string `json:"name"`
 		} `json:"genres"`
-		ID               uint64   `json:"id"`
-		LastAirDate      string   `json:"last_air_date"`
-		Name             string   `json:"name"`
-		NextEpisodeToAir string   `json:"next_episode_to_air"`
+		ID          uint64 `json:"id"`
+		LastAirDate string `json:"last_air_date"`
+		Name        string `json:"name"`
+		// NextEpisodeToAir string   `json:"next_episode_to_air"`
 		NumberOfEpisodes uint32   `json:"number_of_episodes"`
 		NumberOfSeasons  uint32   `json:"number_of_seasons"`
 		OriginCountry    []string `json:"origin_country"`
@@ -101,10 +101,10 @@ func (api *API) GetTV(ctx context.Context, tvID uint64, language Language) (*TVS
 			VoteCount:    result.VoteCount,
 			Popularity:   result.Popularity,
 		},
-		Backdrop:         api.getImage(result.BackdropPath),
-		Genres:           genres,
-		LastAirDate:      parseDate(result.LastAirDate),
-		NextEpisodeToAir: parseDate(result.NextEpisodeToAir),
+		Backdrop:    api.getImage(result.BackdropPath),
+		Genres:      genres,
+		LastAirDate: parseDate(result.LastAirDate),
+		// NextEpisodeToAir: parseDate(result.NextEpisodeToAir),
 		NumberOfEpisodes: result.NumberOfEpisodes,
 		NumberOfSeasons:  result.NumberOfSeasons,
 		OriginCountry:    result.OriginCountry,
